Changes to home page
I have designed the home page and added extra buttons

--- a/Fisconnect/src/containers/Home.css
+++ b/Fisconnect/src/containers/Home.css
@@ -2,6 +2,7 @@
     text-align: center;
   }
   
+  
   .Home-logo {
     height: 40vmin;
     pointer-events: none;
@@ -37,19 +38,40 @@
     }
   }
   
-  .Home .homepageWelcome h1, h3 {
+  .Home .homepageWelcome {
     text-align: center;
     color: white;
     font-family: roboto-thin, roboto, sans-serif;
-    padding: 20px 
+    padding: 100px 0;
+    padding-left: 75px;
   }
-  
+
+  .Home .homepageWelcome h1{
+    font-size: 100px;
+    text-align: left;
+    color: white;
+    font-family: bold;
+  }
+
+  .Home .homepageWelcome h3{
+    text-align: left;
+    color: white;
+
+  }
+
+  .Home .homepageWelcome h1{
+    font-size: 100px;
+    text-align: left;
+    color: white;
+    font-family: bold;
+  }
+    
   #background_img {
-    display: block;
-    justify-content: center;
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
     min-height: 600px;
     height: calc(100vh);
+    background-position:right top;
+
   }
