--- a/Fisconnect/src/containers/Freelancers.css
+++ b/Fisconnect/src/containers/Freelancers.css
@@ -39,11 +39,12 @@
 
 .freelancer_card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
+    max-width: 700px;
     margin: auto;
     text-align: center;
     font-family: arial;
     padding: 10px;
+
   }
 
 .price {
@@ -56,7 +57,7 @@
     outline: 0;
     padding: 12px;
     color: white;
-    background-color: #000;
+    background-color: grey;
     text-align: center;
     cursor: pointer;
     width: 100%;
@@ -65,6 +66,5 @@
 
 
   .freelancer_card img {
-      width: 50%;
+      width: 100%;
   }
-  
