--- a/Fisconnect/src/containers/Freelancers.css
+++ b/Fisconnect/src/containers/Freelancers.css
@@ -1,41 +1,3 @@
-/* .card_thumbnail {
-    width:100px;
-    height: 10px;
-} */
-
-/* .dFlex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.main_content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
-    width: 70%;
-    height: 100%;
-    margin: 50px auto;
-    padding: 50px 0  0;
-    box-sizing: border-box;
-    position: relative;
-    flex-wrap: wrap;
-}
-*/
-/* .freelancer_card {
-    width:30%;
-    border-radius: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position: relative;
-    transform:scale(.8);
-    transition: all .3% ease-in-out;
-    margin-bottom: 50px
-} */
-
 
 .freelancer_card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -47,10 +9,6 @@
 
   }
 
-.price {
-    color: grey;
-    font-size: 22px;
-  }
 
 .freelancer_card button {
     border: none;
@@ -64,7 +22,10 @@
     font-size: 18px;
   }
 
+.img_btn {
+    cursor: pointer;
+}
 
-  .freelancer_card img {
+.freelancer_card img {
       width: 100%;
   }
