--- a/Fisconnect/src/containers/Portfolio.css
+++ b/Fisconnect/src/containers/Portfolio.css
@@ -28,3 +28,8 @@
     color: rgb(0, 0, 0);
     font-family: Arial, Helvetica, sans-serif;
   }
+
+  .Portfolio img {
+    max-height: 250px;
+    width: 100%;
+}
