--- a/Fisconnect/src/containers/Freelancers.css
+++ b/Fisconnect/src/containers/Freelancers.css
@@ -2,7 +2,7 @@
 .freelancer_card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
-    margin: 20px;
+    margin: 10px;
     text-align: center;
     font-family: arial;
     padding: 10px;
@@ -22,11 +22,16 @@
     font-size: 18px;
   }
 
-.img_btn {
+.card_image {
     cursor: pointer;
+    height: 125px;
+    width: 100%;
+    object-fit: cover;
+
 }
 
-.freelancer_card img {
-      max-height: 250px;
-      width: 100%;
-  }
+.freelancer_header {
+  text-align: center;
+  padding: 20px;
+}
+
