--- a/Fisconnect/src/containers/Freelancers.css
+++ b/Fisconnect/src/containers/Freelancers.css
@@ -1,4 +1,11 @@
 
+.profile_pic {
+  height: 60px;
+  width: 60px;
+  margin-bottom: 10px;
+  object-fit: cover;
+}
+
 .freelancer_card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
