Search bar styling

--- a/Fisconnect/src/containers/Freelancers.css
+++ b/Fisconnect/src/containers/Freelancers.css
@@ -12,10 +12,9 @@
     margin: 20px;
     text-align: center;
     padding: 10px;
+    width: 100%;
 
   }
-
-
 
 .freelancer_card button {
   border: none;
