--- a/Fisconnect/src/containers/Portfolio.css
+++ b/Fisconnect/src/containers/Portfolio.css
@@ -2,30 +2,17 @@
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
-    height: calc(100vh);
+    height: 100%;
+    width: 100%;
     background-position:right top;
-    background: rgb(255, 255, 255);
+    background-color: #315e92!important;
 }
 
 .Portfolio h1{
     font-size: 50px;
     text-align: centre;
-    color: rgb(0, 0, 0);
-    font-family: Arial, Helvetica, sans-serif;
-  }
-
-.Portfolio h2{
-    font-size: 30px;
-    text-align: left;
-    color: rgb(0, 0, 0);
-    font-family: Arial, Helvetica, sans-serif;
-  }
-
-.Portfolio h3{
-    font-size: 50px;
-    text-align: left;
-    color: rgb(0, 0, 0);
-    font-family: Arial, Helvetica, sans-serif;
+    color: #d6cc11!important;
+    font-family: roboto-thin, roboto, sans-serif;
   }
 
   .Portfolio img {
@@ -37,11 +24,31 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border: 1px solid #ffffff;
+  border: 5px solid #d6cc11!important;
   border-radius: 20px;
 }
 
-.Portfolio .carousel_caption{
-  
-
+.biography {
+  background-color: #d6cc11!important;
+  border-radius: 10px;
+  width: 80%;
+  align-items: center;
+  margin: auto;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
+
+.biography h2{
+  font-size: 20px;
+  color: #000000;
+  font-family: roboto-thin, roboto, sans-serif;
+  font-weight: bold;
+}
+
+.biography h3{
+  font-size: 20px;
+  color: #000000;
+  font-family: roboto-thin, roboto, sans-serif;
+}
+
