--- a/Fisconnect/src/containers/Portfolio.css
+++ b/Fisconnect/src/containers/Portfolio.css
@@ -24,12 +24,12 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border: 5px solid #d6cc11!important;
+  border: 5px solid #e4de7b!important;
   border-radius: 20px;
 }
 
 .biography {
-  background-color: #d6cc11!important;
+  background-color: #e4de7b!important;
   border-radius: 10px;
   width: 80%;
   align-items: center;
