--- a/Fisconnect/src/containers/Portfolio.css
+++ b/Fisconnect/src/containers/Portfolio.css
@@ -22,6 +22,12 @@
   border-radius: 2px;
 }
 
+.carousel{
+  width:80%;
+  height:500px;
+  margin: auto;
+}
+
 .Portfolio .main_carousel img{
   width: 100%;
   height: 100%;
@@ -58,8 +64,6 @@
   width: 25%;
   height: 100%;
   object-fit: cover;
-  border: 5px solid #28527a!important;
-  border-radius: 20px;
 }
 
 
