--- a/Fisconnect/src/containers/Portfolio.css
+++ b/Fisconnect/src/containers/Portfolio.css
@@ -32,12 +32,12 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border: 5px solid #e4de7b!important;
+  border: 5px solid #f4d160!important;
   border-radius: 2px;
 }
 
 .biography {
-  background-color: #e4de7b!important;
+  background-color: #f4d160!important;
   border-radius: 2px;
   width: 80%;
   align-items: center;
