--- a/Fisconnect/src/containers/Portfolio.css
+++ b/Fisconnect/src/containers/Portfolio.css
@@ -11,7 +11,7 @@
 .Portfolio h1{
   font-size: 50px;
   text-align: centre;
-  color: #d6cc11!important;
+  color: #315e92!important;
   font-family: roboto-thin, roboto, sans-serif;
 }
 
@@ -32,12 +32,12 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border: 5px solid #f4d160!important;
+  border: 5px solid #315e92!important;
   border-radius: 2px;
 }
 
 .biography {
-  background-color: #f4d160!important;
+  background-color: #315e92!important;
   border-radius: 2px;
   width: 80%;
   align-items: center;
@@ -49,14 +49,14 @@
 
 .biography h2{
   font-size: 20px;
-  color: #000000;
+  color: #f4d160;
   font-family: roboto-thin, roboto, sans-serif;
   font-weight: bold;
 }
 
 .biography h3{
   font-size: 20px;
-  color: #000000;
+  color: #f4d160;
   font-family: roboto-thin, roboto, sans-serif;
 }
 
