--- a/Fisconnect/src/App.css
+++ b/Fisconnect/src/App.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Poppins:ital,wght@0,500;1,500&display=swap');
 .App {
-    
+    /* font-family: 'Poppins', sans-serif;    */
+    font-family: 'Noto Sans KR', sans-serif;
+
+
+
 }
