--- a/Fisconnect/src/containers/Portfolio.css
+++ b/Fisconnect/src/containers/Portfolio.css
@@ -66,4 +66,21 @@
   object-fit: cover;
 }
 
+.contact-btn button {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  color: #f4d160;
+  background-color: #28527a;
+  text-align: center;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.contact-btn button:hover {
+  background-color: #28527acc;
+  text-decoration: none;
+  color: #f4d160c4;
+}
+
 
