--- a/Fisconnect/src/containers/AboutUs.css
+++ b/Fisconnect/src/containers/AboutUs.css
@@ -5,8 +5,6 @@
     height: 1000px;
     width: 100%;
     background-position:right top;
-    background-color: #28527a!important;
-
 }
 
 #background_img {
@@ -18,22 +16,22 @@
     background-position:right top;
 }
 
-.AboutUs h1 {
-    font-size: 50px;
+.AboutUs {
+    /* font-size: 50px; */
     text-align: centre;
     /* font-family: roboto-thin, roboto, sans-serif; */
     text-align: center;
     color: #f4d160;
 }
 
-.WhoWeAre h2 {
+.AboutUs p {
     font-size: 25px;
     text-align: centre;
-    font-family: roboto-thin, roboto, sans-serif;
+    /* font-family: roboto-thin, roboto, sans-serif; */
     text-align: center;
     color: #f4d160;
-    padding-left: 20%;
-    padding-right: 20%;
+    /* padding-left: 20%;
+    padding-right: 20%; */
 }
 
 .footer {
