--- a/Fisconnect/src/containers/Register.css
+++ b/Fisconnect/src/containers/Register.css
@@ -10,7 +10,7 @@
 
 .register-btn button {
     margin: 10px 0px;;
-    
+    border-radius: 50px;
     background-color: #28527a;
     color: #f4d160;
     text-decoration: none;
