--- a/Fisconnect/src/containers/Home.css
+++ b/Fisconnect/src/containers/Home.css
@@ -85,10 +85,16 @@
     border-radius: 50%;
     text-align: center;
     font-size: 17px;
-    display: inline-block; 
   }
 
   #btn_link {
     color: #f4d160;
+    text-align: center;
     font-size: 18px;
+    display:block;
+    padding-top: 21%;
+    padding-bottom: 21%;
+    padding-left: 5%;
+    padding-right: 5%;
+
   }
