--- a/Fisconnect/src/containers/Home.css
+++ b/Fisconnect/src/containers/Home.css
@@ -23,12 +23,13 @@
   }
     
   #background_img {
+    display: block;
+    justify-content: center;
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
     min-height: 600px;
     height: calc(100vh);
-    background-position:center center;
   }
 
   .yellow-font {
