--- a/Fisconnect/src/containers/AboutUs.css
+++ b/Fisconnect/src/containers/AboutUs.css
@@ -2,7 +2,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
-    height: 1000px;
+    height: 1100px;
     width: 100%;
     background-position:right top;
 }
@@ -27,6 +27,7 @@
     text-align: centre;
     text-align: center;
     color: #f4d160;
+    font-weight: bold;
 }
 
 .footer {
@@ -34,7 +35,7 @@
   }
 
 .resize-img {
-    width: 70%;
+    width: 90%;
 }
 
 .div-container {
